# prompt-vault

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  ARCHITECTURE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs  utils.rs
src-tauri/src/db/: commands.rs  mod.rs
src/components/Common/: Toast.module.css  Toast.tsx
src/components/DetailPanel/: DetailPanel.module.css  DetailPanel.tsx
src/components/Layout/: App.module.css  App.tsx  DetailPanel.module.css  DetailPanel.tsx  Layout.module.css  Layout.tsx  MainPanel.module.css  MainPanel.tsx  Sidebar.module.css  Sidebar.tsx
src/components/MainPanel/: FilterChips.module.css  FilterChips.tsx  MainPanel.module.css  MainPanel.tsx  PromptCard.module.css  PromptCard.tsx  PromptList.module.css  PromptList.tsx  SearchBar.module.css  SearchBar.tsx  SortSelector.module.css  SortSelector.tsx
src/components/Modals/: CreatePromptModal.module.css  CreatePromptModal.tsx  DeleteConfirmDialog.module.css  DeleteConfirmDialog.tsx  EditPromptModal.module.css  EditPromptModal.tsx
src/hooks/: usePrompts.ts  useSearch.ts
src/services/: api.ts
src/store/: filterStore.ts  promptStore.ts  uiStore.ts
src/styles/: index.css
src/types/: api.ts  category.ts  prompt.ts  settings.ts  tag.ts  version.ts
src/utils/: charCount.ts  formatters.ts  index.ts  tokenEstimate.ts  validators.ts  wordCount.ts
